scss/_about-masthead.scss
header.about-masthead {
    width: 100%;
    height: 100%;
    background: #161618;
    background-image: url(/img/about/background.jpg);
    background-repeat: no-repeat;
    background-position: center;

    @media(max-width: 600px) {
        height: 350px;
        background-size: contain;
    }

    .top-menu {
        position: absolute;
        width: 100%;
        top: 10px;
        padding: 0 90px;

        @media(max-width: 600px) {
            padding: 0 20px;
            font-size: 12px;
            top: 15px;
        }

        div {
            display: inline-block;
        }

        > div:first-child {
            div {
                padding: 10px 10px;
                margin-right: 10px;
            }

            div.active {
                border-bottom: 2px solid #126efd;
            }
        }

        > div:last-child {
            div {
                font-size: 20px;
                padding: 10px;

                @media(max-width:600px) {
                    font-size: 16px;
                    padding: 8px 12px;
                }
            }
        }

        a {
            color: white;
        }

        i {
            color: #b7b7b7;
        }
    }



    .center-panel {
        margin: auto;
        width: 80%;
        position: relative;

        .left {
            text-align: right;
            position: absolute;
            width: 505px;
            top: 45%;
        }

        .right {
            text-align: left;
            position: absolute;
            width: 505px;
            top: 70%;
            right: 0;
        }


        img {
            margin: 70px auto 30% auto;
            zoom: 0.7;

            @media(max-width:600px) {
                margin: 180px auto 15% auto;
                zoom: 0.55;
            }
        }

        span {
            font-size: 18px;

            @media(max-width:600px) {
                font-size: 12px;
            }
        }
    }
}

.connection-line {
    z-index: 10;
    position: absolute;
    bottom: 0;
    width: 100%;

    @media(max-width:600px) {
        font-size: 12px;
        position: unset;
    }

    div {
        margin: 5% auto;
        background-color: white;
        height: 90px;
        width: 1px;

        @media(max-width:600px) {
           height:60px;
        }
    }
}

